--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,16 @@
 [metadata]
 name = async_case
-version = 3.8.1
+version = 10.0.0
 url = https://github.com/nvllsvm/async_case
 author = Andrew Rabert
 author_email = ar@nullsum.net
 description = Backport of Python 3.8's unittest.async_case
 long_description = file: README.md
 long_description_content_type = text/markdown
+classifiers =
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+
 
 [options]
 py_modules = async_case
