--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ description = Backport of Python 3.8's unittest.async_case
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
+    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
 
